--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "github:neondatabase/serverless",
+    "dotenv": "^17.2.3",
     "next": "15.5.4",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
@@ -26,6 +27,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "sequelize-cli": "^6.6.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
